# webServe

./: 404.html  Cargo.toml  README.md  config.txt  hello.html  log.txt
exec/: .gitignore  webserve.rs
src/: cli.rs  config.rs  http_handler.rs  main.rs  server.rs  tcp_server.rs  webserve.rs  webserve_cli.rs  webserve_gui.rs
tests/: cli_test.rs  config_test.rs
